--- a/SampleLogin/app/build.gradle
+++ b/SampleLogin/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.4.0"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     kapt "com.google.dagger:hilt-compiler:2.42"
+    // Room dependencies
+    implementation ("androidx.room:room-ktx:2.4.0-alpha03")
+    kapt("androidx.room:room-compiler:2.4.0-alpha03")
 }
