--- a/SampleLogin/app/build.gradle
+++ b/SampleLogin/app/build.gradle
@@ -65,4 +65,6 @@ dependencies {
     // Room dependencies
     implementation ("androidx.room:room-ktx:2.4.0-alpha03")
     kapt("androidx.room:room-compiler:2.4.0-alpha03")
+
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 }
